# backend/internal/interface/openapi/auth_routes.gen.go
@@ -9,9 +9,11 @@ var bearerAuthRoutes = map[string]struct{}{
 	"DELETE /auth/logout": {},
 	"POST /families": {},
 	"POST /families/join": {},
+	"GET /notifications": {},
 	"GET /task-templates": {},
 	"GET /tasks": {},
 	"POST /tasks": {},
+	"POST /tasks/:taskId/appreciations": {},
 	"PATCH /tasks/:taskId/done": {},
 	"GET /users/me": {},
 	"PATCH /users/me": {},
